updated to depend on mercury

--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
   "author": "Tom",
   "license": "MIT",
   "devDependencies": {
+    "mercury": "^14.0.0",
     "tap": "^0.7.1"
   },
   "dependencies": {
     "capitalize": "^0.5.0",
-    "xtend": "^4.0.0",
-    "virtual-dom": "^2.0.1"
+    "xtend": "^4.0.0"
   },
   "directories": {
     "test": "test"
